# EngineLab

./: .gitignore  LICENSIES  ROADMAP  emanage.txt  main.py  pyproject.toml  run.bat
controllers/: main_controller.py
gui/: channel_tree.py  custom_viewbox.py  info_panel.py  main_window.py  measurements_panel.py  plot_area.py  plot_manager.py  plot_sync.py  plot_widget.py  project_panel.py
models/: channel.py  channel_info.py  channel_type.py  cursor_mode.py  marker.py  measurement.py  project.py  session.py  statistics.py
parsers/: emanage_ultimate.py  nissan_datascan.py  parser.py  parser_factory.py  value_converter.py
resources/: resources.py  resources.qrc
