[project]
name = "enginelab"
version = "0.1.0"
description = "Universal Engine Log Analyzer"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "numpy>=2.3",
    "pandas>=2.3",
    "scipy>=1.16",
    "PySide6>=6.9",
    "pyqtgraph>=0.13.7",
    "SQLAlchemy>=2.0",
    "openpyxl>=3.1",
    "reportlab>=4.4",
    "pandas-stubs~=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.2",
    "ruff>=0.12",
    "mypy>=1.17",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # bugbear
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.13"

warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
